<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:paddingLeft="@dimen/section_spacing"
    android:paddingRight="@dimen/section_spacing"
    android:paddingBottom="48dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@null"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_spacing"
        android:text="@string/app_name"
        android:textColor="@color/purple_primary"
        android:textSize="@dimen/text_heading_large"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.WorldBank.Button.Primary"
        android:text="@string/btn_log_in" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/Widget.WorldBank.Button.Secondary"
        android:text="@string/btn_sign_up"
        android:layout_marginTop="@dimen/item_spacing" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/gray_hint"
        android:textSize="@dimen/text_body"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_spacing"
        android:layout_marginBottom="@dimen/item_spacing" />

    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:background="@drawable/bg_social_button"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_google"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue_google"
            android:textColor="@color/black"
            android:textSize="@dimen/text_body"
            android:layout_marginStart="@dimen/small_spacing" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:background="@drawable/bg_social_button"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/item_spacing">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_facebook"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue_facebook"
            android:textColor="@color/black"
            android:textSize="@dimen/text_body"
            android:layout_marginStart="@dimen/small_spacing" />

    </LinearLayout>

</LinearLayout>