<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:paddingLeft="@dimen/section_spacing"
    android:paddingRight="@dimen/section_spacing"
    android:paddingBottom="40dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
         />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_desc"
        android:textColor="@color/gray_hint"
        android:textSize="@dimen/text_body"
        android:lineSpacingMultiplier="1.4"
        android:layout_marginTop="@dimen/section_spacing" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/section_spacing" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.WorldBank.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        android:hint="@string/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/input_padding_horizontal"
            android:paddingEnd="@dimen/input_padding_horizontal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/Widget.WorldBank.Button.Primary"
        android:text="@string/btn_confirm"
        android:layout_marginTop="@dimen/section_spacing" />

</LinearLayout>